debug, java 1.5, added a setting 'mmbase.taglib.max_include_level'